--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -68,7 +68,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: variables.$color-light;
+    // background-color: variables.$color-light;
     display: flex;
     flex-direction: column;
     justify-content: center;
